<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arrows</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">This is the hello reference </string>
    <string name="start_arrow">Start Arrow!</string>
    <string name="straight">Straight</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="u_turn">U-turn</string>
    <string name="slight_left">Slight Left</string>
    <string name="slight_right">Slight Right</string>
    <string name="animation_speed_label">Animation Speed</string>
    <string name="animation_speed_percentage">0</string>

</resources>
