<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/staight_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/straight" />

    <Button
        android:id="@+id/left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/staight_arrow"
        android:layout_toRightOf="@+id/staight_arrow"
        android:text="@string/left" />

    <SeekBar
        android:id="@+id/animation_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/staight_arrow"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/animation_speed"
        android:layout_alignLeft="@+id/animation_speed"
        android:text="@string/animation_speed_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/slight_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/staight_arrow"
        android:layout_below="@+id/staight_arrow"
        android:text="@string/slight_left" />

    <Button
        android:id="@+id/right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/left_arrow"
        android:layout_alignBottom="@+id/left_arrow"
        android:layout_toRightOf="@+id/left_arrow"
        android:text="@string/right" />

    <Button
        android:id="@+id/slight_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/slight_left"
        android:layout_alignBottom="@+id/slight_left"
        android:layout_toRightOf="@+id/slight_left"
        android:text="@string/slight_right" />

    <TextView
        android:id="@+id/animation_speed_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/animation_speed"
        android:text="@string/animation_speed_percentage"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>